<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="bottom">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="match_parent"
            android:layout_height="149dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:paddingTop="50dp"
            app:srcCompat="@drawable/capmap1" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:layout_weight="1.4"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:backgroundTint="@color/black"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:drawableTint="@color/black"
                android:fontFamily="@font/playfair_display"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="#4B4747" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:drawableTint="@color/black"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#4B4747"
                android:maxLines="1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:gravity="end"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:textSize="20dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/primaryColor"
                android:padding="15dp"
                android:text="Login"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:elevation="10dp"
                app:strokeColor="@color/primaryColor"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="Signup"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:elevation="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="120dp"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="OR"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="120dp"
                    android:layout_height="1dp"
                    android:background="@color/black" />
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnFacebook"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/btnGoogle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/ic_google" />

        <ImageView
            android:id="@+id/btnInstagram"
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/ic_instagram" />

    </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>